--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
         </div>
         <div class="item divider"></div>
         <div class="item">
-            <a href="https://maps.google.com/maps?key=AIzaSyDaa0FdAfpQzAF1c7Twg7QyIZZ_iFHthto&daddr=4111%20Stephens%20Street,San%20Diego,California,92103&saddr=&hl=en"
-                            target="_blank">
-
-                4111 Stephens Street<br/>
+            <a href="https://goo.gl/maps/E9qcPFsPPstND9yZ8" target="_blank">
+                Inside Broadway Salon Studios<br/>
+                3055 university ave <br/>
+                Suite 122<br />
                 San Diego, CA<br />
-                92103<br />
+                92104<br />
             </a>
         </div>
         <div class="item redirect">
